[FEATURE] Add a diogenes logo

--- a/ng-diogenes/src/index.html
+++ b/ng-diogenes/src/index.html
@@ -5,7 +5,7 @@
   <title>Diogenes</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/logo/logo_transparent.png">
   <!-- Load environment variables -->
   <script src="assets/env.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
